--- a/public/style.css
+++ b/public/style.css
@@ -92,6 +92,9 @@ abbr:where([title]) {
           text-decoration: underline dotted;
 }
 
+.portfolio-image {
+  width: 200px;  /* Replace 200px with your desired width */
+}
 /*
 Remove the default font size and weight for headings.
 */
